# tirx-kernels

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish_pypi.yml
tests/: test_bench_cli.py  test_bench_suite.py  test_flash_attention4_iket.py  test_flashmla_dispatch.py  test_flashmla_iket.py  test_mega_moe_helpers.py  test_megakernel_runtime.py  test_nvfp4_bench.py  test_registry_discover.py  test_registry_overlay.py  test_trtllm_gen_flashmla_bench.py
tirx_kernels/: CLAUDE.md  INVARIANTS.md  __init__.py  _protocol.py  registry.py  runner.py
tirx_kernels/attention/: _flashmla_bench.py  flash_attention4.py  sparse_flashmla_prefill_head128_phase1.py  sparse_flashmla_prefill_head64_phase1.py
tirx_kernels/bench/: __main__.py
tirx_kernels/bench_suite/: README.md  __init__.py  __main__.py  baseline.json  baseline.md  baseline_view.py  impls.py  promote_baseline.py  ratio.json  ratio_diff.py  reaggregate_from_logs.py  ref.json  run.py  tir.json  workloads.yaml  workloads_sglang_fp8_paged_mqa.yaml
tirx_kernels/deepgemm/: __init__.py  mega_moe.py  mqa_logits_fp4.py  mqa_logits_fp8.py  paged_mqa_logits_fp4.py  paged_mqa_logits_fp8.py  tf32_hc_prenorm_gemm.py
tirx_kernels/experimental/: __init__.py
tirx_kernels/experimental/nymph-rust/: .gitignore  Cargo.toml  README.md  STATUS.md  build.rs  pyproject.toml  run_python_tests.sh
tirx_kernels/experimental/nymph-rust/docs/: hardware-verification.md  interpreter-semantics.md  interpreter.md  ir.md  memory-race-check-design.md  protocol-trace.md  rfc-protocol-checker-algorithm.md  rfc-protocol-checker.md  rfc-scheduler-abstraction.md
tirx_kernels/experimental/nymph-rust/python/nymph_rs/: __init__.py  builder.py
tirx_kernels/experimental/nymph-rust/python/nymph_rs/kernels/: __init__.py  flash_attention4.py  flash_bwd_sm100.py  fp16_bf16_gemm.py  fp8_blockwise_gemm.py  gdn_prefill.py  nvfp4_gemm.py
tirx_kernels/experimental/nymph-rust/src/: lib.rs  main.rs  py.rs
tirx_kernels/experimental/nymph-rust/src/interpreter/: blas.rs  checker.rs  cohort.rs  diagnostics.rs  elementwise.rs  ids.rs  mbar_ops.rs  mod.rs  outcomes.rs  protocol.rs  region.rs  registry.rs  runner.rs  scalar_eval.rs  scheduler.rs  slice_indexing.rs  state.rs  threads.rs  tmem.rs  transfer.rs
tirx_kernels/experimental/nymph-rust/src/interpreter/semantics/: control.rs  cp_async.rs  fence.rs  ldstmatrix.rs  leaf.rs  mbarrier.rs  metadata.rs  mod.rs  reg.rs  scalar.rs  sync.rs  tcgen05.rs  tma.rs  tmem.rs
tirx_kernels/experimental/nymph-rust/src/interpreter/values/: arrays.rs  cooperative.rs  dtypes.rs  indexing.rs  ldstmatrix.rs  mbars.rs  mod.rs  reg_numerics.rs  registers.rs  runtime.rs  scalars.rs  smem.rs  tcgen05_datapath.rs  tensors.rs  tmem.rs
tirx_kernels/experimental/nymph-rust/src/ir/: dtype.rs  kernel.rs  mbar.rs  mod.rs  scalar.rs  scheduler.rs  stmt.rs  tensor.rs  validate.rs
tirx_kernels/experimental/nymph-rust/tests/: interpreter_runner.rs  ldstmatrix_hardware.rs  tcgen05_ldst_hardware.rs  tcgen05_mma_hardware.rs
tirx_kernels/experimental/nymph-rust/tests/cuda/: tcgen05_mma_accum_dump.cu  tcgen05_mma_cta2_dump.cu  tcgen05_mma_cta2_m128_dump.cu  tcgen05_mma_m128_dump.cu  tcgen05_mma_m64_align16_dump.cu  tcgen05_mma_m64_dump.cu
tirx_kernels/experimental/nymph-rust/tests/interpreter/: helpers.py  test_control.py  test_failures.py  test_inputs.py  test_ldstmatrix.py  test_mbarrier.py  test_protocol.py  test_reg.py  test_scheduler.py  test_sync.py  test_tcgen05.py  test_tma.py  test_tmem.py
tirx_kernels/experimental/nymph-rust/tests/ir/: test_bindings.py  test_builder_integration.py  test_structure.py  test_validation.py
tirx_kernels/experimental/nymph-rust/tests/kernels/: test_flash_attention4.py  test_fp8_blockwise_gemm.py  test_interpreter_e2e.py  test_perf_bench.py
tirx_kernels/flashmla/: __init__.py  _flashmla_bench.py  _gemm.py  _mask.py  _tma.py  _trtllm_gen_bench.py  flash_mla_sparse_fwd.py  sparse_prefill_head128_phase1.py  sparse_prefill_head128_small_topk_phase1.py  sparse_prefill_head64_phase1.py
tirx_kernels/gemm/: fp16_bf16_gemm.py  fp8_blockwise_gemm.py  grouped_fp8_gemm_contiguous.py  grouped_fp8_gemm_contiguous_bench.py  nvfp4_gemm.py
tirx_kernels/megakernel/: README.md  __init__.py  moe.py
tirx_kernels/megakernel/kernels/: __init__.py  gate_up_silu.py  gemm.py  group_gemm_sm100.py  moe_align.py  topk_softmax.py
tirx_kernels/megakernel/sglang_moe_configs/configs/triton_3_6_0/: E=128,N=768,device_name=NVIDIA_B200.json  E=128,N=768,device_name=NVIDIA_B200_down.json
tirx_kernels/megakernel/utils/: __init__.py  base.py  config.py  dynamic_scheduler.py  static_scheduler.py  support.py  utils.py
tirx_kernels/normalization/: rmsnorm.py
tirx_kernels/test/: __main__.py
tirx_kernels/tir_bench/: README.md  __main__.py  baseline.md  baseline_view.py  promote_baseline.py  ratio.json  ratio_diff.py  reaggregate_from_logs.py  ref.json  run.py  tir.json  workloads.yaml
