[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tirx-kernels"
version = "0.1.0"
description = "TIRX kernel library — test and benchmark infrastructure for TIR compiler kernels"
requires-python = ">=3.10"
# tvm, torch, triton are runtime dependencies managed externally (not on PyPI)
dependencies = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
include = ["tirx_kernels*"]

[tool.pytest.ini_options]
# Repo root on sys.path so pytest imports the tirx_kernels package
# without requiring PYTHONPATH each time. TIR (`tvm.tirx`) and external
# deps like deep_gemm are user-installed and must stay on the env.
pythonpath = ["."]
markers = [
  "nymph_perf: benchmark-sized or full-matrix Nymph GPU gates; skipped by default, run with --run-nymph-perf",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "RUF", # ruff-specific rules
]
ignore = [
  # pyupgrade (style preference or low-value)
  "UP028", # yield-in-for-loop
  "UP030", # format-literals
  "UP031", # printf-string-formatting
  # ruff (preview rules, not yet stable)
  "RUF043", # pytest-raises-ambiguous-pattern
  "RUF059", # unused-unpacked-variable
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F405"]
"tirx_kernels/**/*.py" = ["E501", "E741", "F821", "F823", "F841", "F842"]
"tirx_kernels/experimental/nymph-rust/python/nymph_rs/kernels/**/*.py" = [
  "E702",
  "RUF002",
  "RUF003",
  "UP038",
]

[tool.ruff.lint.isort]
known-first-party = ["tvm", "tirx_kernels"]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
